crates/wac-parser/tests/resolution/fail/missing-type-in-use.wac
interface a {

}

interface b {
    use a.{x};
}